--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,20 +1,25 @@
-cffi==1.15.0
-clingo==5.5.1
-cycler==0.11.0
-fonttools==4.32.0
-joblib==1.1.0
-kiwisolver==1.4.2
-matplotlib==3.5.1
-numpy==1.22.3
-packaging==21.3
-pandas==1.4.2
-Pillow==9.1.0
-prince==0.7.1
-pycparser==2.21
-pyparsing==3.0.8
-python-dateutil==2.8.2
-pytz==2022.1
-scikit-learn==1.0.2
-scipy==1.8.0
+altair==5.4.1
+attrs==24.2.0
+cffi==1.17.1
+clingo==5.7.1
+Jinja2==3.1.4
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+MarkupSafe==3.0.1
+narwhals==1.9.3
+numpy==2.1.2
+packaging==24.1
+pandas==2.2.3
+prince==0.13.1
+pycparser==2.22
+python-dateutil==2.9.0.post0
+pytz==2024.2
+referencing==0.35.1
+rpds-py==0.20.0
+scikit-learn==1.5.2
+scipy==1.14.1
 six==1.16.0
-threadpoolctl==3.1.0
+threadpoolctl==3.5.0
+typing_extensions==4.12.2
+tzdata==2024.2
